--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/presupuesto.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/presupuesto.html
@@ -72,7 +72,7 @@
 						name="email" data-ng-model="$parent.recogida.email"  placeholder="Direccion de correo electrónico" />
 				</div>
 				<div class="form-group col-sm-12">
-					<button class="btn btn-xm btn-success" data-ng-click="sendSolicitudPresupuesto($parent.recogida)">Solicitar
+					<button class="btn btn-xm btn-success" data-ng-click="updateRecogida(); sendSolicitudPresupuesto($parent.recogida);">Solicitar
 						presupuesto por email</button>
 				</div>
 			</div>
